Update on Overleaf.

--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -204,17 +204,22 @@ Concerning the comments made by the second referee:
 	
 	% Last paragraph of page 5, you do not state explicitly if genetic algorithms were use within the OpenMOLE platform.
 	\item The functionalities of OpenMOLE we used were detailed; we did not use genetic algorithms but sampling methods and high performance computing environments.
+    \comment[CC]{argumentaire à ajouter dans le papier}
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
 	\item 
 	
 	% Figure 4 and 5: I find it confusing that the green color indicates higher distance values and the red color indicates lower values. I think this should be reversed.
+    
 	\item \comment[JR]{Clem tu es d'accord là dessus ?}
+    \comment[CC]{Non mais il chipote complètement à ce niveau! Vu la figure pour moi c'est totalement équivalent dans un sens et dans l'autre, le tout c'était qu'il y'a une double descente chromatique et y'a même pas de densité = rouge ou quoi puisque c'est un rapport. Si tu veux lui faire plaisir on change mais je vois pas trop la nécessité.}
 	
 	% I appreciate the fact that the authors in section 4 clearly indicate the limitations of their work (and I share the limitations listed under “comparing phase diagrams”). Personally I do not think that releasing the density grids is an important opportunity. As mentioned before I think that the core of the work is in the comparison of the phase vectors. I am not so sure the second opportunity listed in 4.2 is very valid. I do not think that the CEUS journal targets social sciences exactly.
-	
-	
+	Thanks for the remark. We have tried to shorten the considerations which you have found not too useful and will let the readers decide if the grids could be of any use to them.
+	\comment[CC]{argumentaire à ajouter dans le papier}
+    
 \end{itemize}
+
 
 
 
