Update on Overleaf.

--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -229,13 +229,16 @@ Concerning the comments made by the third referee:
 
 \begin{itemize}
 	% I found the research question posed by the author(s) interesting and I agree with the author(s) that many modelers don’t consider how spatial arrangements impact the outcomes of the model and tend to focus only on the parameters. The paper makes good use of the complexity and spatial literature in defining the problem and demonstrates how urban form impacts the results. However, while the paper is innovative, I found it really difficult to interpret and follow the results. I would suggest to the author to rewrite the results and methodology so that they flow better and also provide more context with respect to how to interpret the results.
-	\item 
+	\item We have tried to make the methodology and result section flow better in the corresponding sections.
+    \comment[CC]{à faire dans le papier}
 	
 	% On a side note, one of your key words you use “validation” but in what sense?  You don’t really come back to this in the paper, also you write about “the validity of generative models is uncertain until their results are proven robust and representative of ’real-world’ conditions.” In the abstract but this is it.  What do you consider real world conditions to be? You seem to allude that you need to have the spatial generator to generate realistic (styles) city shapes for testing on the Schelling model but I am not convinced.  After the abstract all notion of validation is missing.
-	\item \comment[JR]{enlever le concept de validation}
+	\item We have agreed with the reviewer and removed the concept of validation altogether, replacing it with model evaluation or sensitivity analysis.
+    \comment[JR]{enlever le concept de validation}
 	
 	% Geosimulation is introduced but not defined or referenced.  This should be clarified as the term has several meanings etc.
 	\item For the definition of geosimulation, we meant the one coined by (Benenson and Torrens, 2004), this was made explicit and the reference was added. 
+    \comment[CC]{à ajouter dans le papier}
 	
 	% In places the English along with the overall argument could be better articulated. For example, on page 1 you write: “We think simulation can become a very good tool to achieve this,”  Could this be rewritten or better argued. You are not the only one to believe this but you don’t show this in your paper.
 	\item 
