--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -270,13 +270,13 @@ Concerning the comments made by the fourth referee:
 	\item 
 	
 	% Rigorous experimental method described. In the matching of European metropolitan areas to your generated outputs, I wonder what you are missing by not using cities from other continents. i.e. by widening the cities available to your study it may be possible to even better discover real-world examples of your archtypes (compact, polycentric, discontinuous).
-	\item 
+	\item \comment[JR]{}
 	
 	% Why do you not have the same amount of repetitions for your Sugarscape (50 repetitions) and Schelling (100 repetitions) model runs?
-	\item \comment[JR]{no justification $\rightarrow$ new runs ?}
+	\item \comment[JR]{no justification for the difference in number of runs (just experimental setup contingence\ldots ) $\rightarrow$ either new runs or redo computations with 50 for Schelling}
 	
 	% You say your models are open source - do you give details of that source?  
-	\item 
+	\item Concerning the source code of the models, an open public repository was put into place and the link provided in the paper (to an anonymized version to ensure blind review).
 	
 	% Small edits:
 	% X line 68: "...a different system"
